# CDK_pywrapper

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: pre-commit.yml  tests.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
java/CDKdesc/: README.md
java/CDKdesc/src/CDKdesc/: Main.java
src/CDK_pywrapper/: __init__.py  cdk_pywrapper.py  descs.json  utils.py  version.py
tests/: __init__.py  constants.py  test_descriptors.py  test_fingerprints.py  test_version.py
