# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
reverse_relative = true
honor_noqa = true

[tool.yapf]
based_on_style = "facebook"
column_limit = 120

[tool.ruff]
 line-length = 120
 target-version = "py38"
 fix = true
 fixable = ["ALL"]
 unfixable = []

 # inspired by the configuration used in the pandas project
 select = [
   # pyflakes
   "F",
   # pycodestyle
   "E", "W",
   # flake8-2020
   "YTT",
   # flake8-bugbear
   "B",
   # flake8-quotes
   "Q",
   # flake8-debugger
   "T10",
   # flake8-gettext
   "INT",
   # pylint
   "PLC", "PLE", "PLR", "PLW",
   # misc lints
   "PIE",
   # flake8-pyi
   "PYI",
   # tidy imports
   "TID",
   # implicit string concatenation
   "ISC",
   # type-checking imports
   "TCH",
   # comprehensions
   "C4",
   # pygrep-hooks
   "PGH",
   # Ruff-specific rules
   "RUF",
 ]

 ignore = [
   # we decided on having relative rather than absolute imports
   "TID252",
   # module level import not at top of file
   "E402",
   # do not assign a lambda expression, use a def
   "E731",
   # controversial
   "B006",
   # controversial
   "B007",
   # controversial
   "B008",
   # tests use assert False
   "B011",
   # tests use comparisons but not their returned value
   "B015",
   # false positives
   "B019",
   # Loop control variable overrides iterable it iterates
   "B020",
   # Function definition does not bind loop variable
   "B023",
   # Only works with python >=3.10
   "B905",
   # Too many arguments to function call
   "PLR0913",
   # Too many returns
   "PLR0911",
   # Too many branches
   "PLR0912",
   # Too many statements
   "PLR0915",
   # Redefined loop name
   "PLW2901",
   # Global statements are discouraged
   "PLW0603",
   # Docstrings should not be included in stubs
   "PYI021",
   # No builtin `eval()` allowed
   "PGH001",
   # compare-to-empty-string
   "PLC1901",
   # pairwise-over-zipped (>=PY310 only)
   "RUF007",
   # Within an except clause, raise exceptions with ...
   "B904",
   # Use "collections.abc.*" instead of "typing.*" (PEP 585 syntax)
   # "PYI027",  # not yet implemented
   # while int | float can be shortened to float, the former is more explicit
   # "PYI041",  # not yet implemented
 ]

# Exclude a variety of commonly ignored dictionaries
 exclude = [
    "docs/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
