[metadata]
name = CDK_pywrapper
version = attr: CDK_pywrapper.__version__
description = Python wrapper for CDK molecular descriptors and fingerprints
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/CDK_pywrapper

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    Chemistry Development Kit
    molecular descriptors
    molecular fingerprints
    cheminformatics
    QSAR

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    more-itertools
    numpy
    pandas
    rdkit
    install-jdk==0.3.0
    bounded-pool-executor==0.0.3

[options.packages.find]
where = src

[options.package_data]
* = *

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest